<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#E3F2FD"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps!"
        android:id="@+id/header_text"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/button"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/header_text"
        android:layout_centerHorizontal="true"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1_text"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_text"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3_text"
        android:id="@+id/button4"
        android:layout_marginTop="20dp"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_below="@+id/button3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4_text"
        android:id="@+id/button5"
        android:layout_marginTop="20dp"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_below="@+id/button4"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5_text"
        android:id="@+id/button6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button5"
        android:background="#D50000"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
